<resources>
    <string name="app_name">PrimeMathsQuiz</string>
    <string name="question_text">Is this a prime number?</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="correct_toast">Awesome! You are Correct!</string>
    <string name="incorrect_toast">Oops! Looks like somebody forgot their math!</string>
    <string name="true_toast_bg">#ffffff</string>
    <string name="true_toast_text_color">#00ff00</string>
    <string name="false_toast_bg">#ffffff</string>
    <string name="false_toast_text_color">#ff0000</string>
    <string name="next_button">Next</string>
    <string name="numberToSet">999</string>
    <string name="Level_Label">Level</string>
    <string name="Show_Hint">Show me the Hint</string>
    <string name="time_finish">What can I say? :( Time waits for none! Try another question by clicking Next.</string>
    <string name="already_answered">You have already answered this! Try Next!</string>
    <string name="cheat_warning_text">You are about to cheat</string>
    <string name="Show_Cheat">I understand the Risk</string>
    <string name="cheat_result">Oops! You just cheated!</string>
    <string name="hint_toast">We do not mind you taking hint as long as you learn.</string>
    <string name="my_hint_dialog_activity_title">PrimeMath Hint</string>
    <string name="my_cheat_dialog_activity_title">PrimeMaths Cheat</string>
</resources>
